# weather_front

./: .gitignore  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json
.github/workflows/: unittests.yml
src/: App.jsx  index.css
src/backend/: pyproject.toml  tox.ini
src/backend/backend/: __main__.py
src/components/: AlertDialog.jsx  Forecast.jsx  Search.jsx  SearchBar.jsx  Today.jsx  UnitSelection.jsx  Weather.css  Weather.jsx
src/components/style/: Forecast.css  Search.css  SearchBar.css  Today.css  Weather.css
src/tests/: SearchBar.test.js
